2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 454689 – Messages in the gnome-screenshot --help output
	are not all translated

	* gnome-screenshot.c (main): Remove the useless option group
	and allow the translation of the application options. (Gabor
	Kelemen)

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 521799 – Use PNG standard keyword

	* screenshot-save.c (screenshot_save_start): Use the standard
	"Software" keyword and update the name of the program. (Felix
	Riemann)

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 515179 – F1 does not display help in interactive dialogue

	* gnome-screenshot.c:
	(key_press_cb), (create_interactive_dialog): Show help in the
	interactive dialog when pressing F1. (Alexander Gnodtke)

2008-07-27  Vincent Untz  <vuntz@gnome.org>

	* gnome-screenshot.c: (target_toggled_cb), (create_effects_frame):
	Use HIG frame spacing and toggle label sensitivity too.
	Patch by Dennis Cranston <dennis_cranston@yahoo.com>
	Fix bug #403462.

2008-07-25  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-egg-xfer-dialog-icons.h:
	* gnome-egg-xfer-dialog.c:
	* gnome-egg-xfer-dialog.h:
	Remove these files, which aren't used anymore after the port to GIO.

2008-07-22  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* gnome-screenshot.c: (error_dialog_response_cb), (save_callback),
	(try_to_save), (screenshot_dialog_response_cb), (run_dialog),
	(finish_prepare_screenshot), (check_file_done), (build_uri),
	(try_check_file), (prepare_screenshot),
	(prepare_screenshot_timeout), (expand_initial_tilde),
	(load_options), (screenshooter_init_stock_icons), (main):
	* screenshot-dialog.c: (screenshot_dialog_new),
	(screenshot_dialog_focus_entry), (screenshot_dialog_get_uri):
	* screenshot-dialog.h:
	* screenshot-save.c: (screenshot_sanitize_filename):
	* screenshot-shadow.c:
	* screenshot-shadow.h:
	* screenshot-xfer.c: (do_run_overwrite_confirm_dialog),
	(transfer_dialog_response_cb), (transfer_progress_dialog_new),