@@ -4,6 +4,30 @@
   <schemalist>    
 
     <schema>
+      <key>/schemas/apps/gnome-screenshot/take_window_shot</key>
+      <applyto>/apps/gnome-screenshot/take_window_shot</applyto>
+      <owner>gnome-screenshot</owner>
+      <type>bool</type>
+      <default></default>
+      <locale name="C">
+        <short>Window-specific screenshot</short>
+        <long>Grab just the current window, rather than the whole desktop.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gnome-screenshot/delay</key>
+      <applyto>/apps/gnome-screenshot/delay</applyto>
+      <owner>gnome-screenshot</owner>
+      <type>int</type>
+      <default></default>
+      <locale name="C">
+        <short>Screenshot delay</short>
+        <long>The number of seconds to wait before taking the screenshot.</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/gnome-screenshot/last_save_directory</key>
       <applyto>/apps/gnome-screenshot/last_save_directory</applyto>
       <owner>gnome-screenshot</owner>
